--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flower Chronicles</title>
+    <title>Serene Petalscape</title>
     <link href="https://fonts.googleapis.com/css2?family=Allura&family=Caveat:wght@400;700&family=Great+Vibes&display=swap" rel="stylesheet">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Allura&family=Caveat:wght@400;700&family=Great+Vibes&display=swap');
@@ -160,7 +160,7 @@
     </div>
 
     <script>
-        // The previous JavaScript remains the same as in the last version
+        
         function createFlowerSVG(type) {
             const svgs = {
                 sakura: `
