--- a/flowergen.html
+++ b/flowergen.html
@@ -1,1 +1,150 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Sakura Drawing Playground</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+            font-family: 'Lucida Handwriting', cursive;
+            background: linear-gradient(130deg, pink, white);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        h1 {
+            color: #ff69b4;
+            text-shadow: 2px 2px 4px rgba(255,105,180,0.3);
+            margin: 20px 0;
+            text-align: center;
+        }
+        #canvas {
+            position: absolute;
+            top: 80px;
+            left: 0;
+            width: 100%;
+            height: calc(100% - 80px);
+            cursor: crosshair;
+        }
+        #flower-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+        }
+        .flower {
+            position: absolute;
+            opacity: 0.5;
+            animation: float 20s infinite alternate;
+        }
+        @keyframes float {
+            0% { transform: translateY(0) rotate(0deg); }
+            100% { transform: translateY(-50px) rotate(20deg); }
+        }
+    </style>
+</head>
+<body>
+  <audio autoplay loop>
+    <source src="WhatsApp Audio 2024-12-02 at 10.24.56_285dcdeb.mp3" type="audio/mpeg">
+    
+</audio>
+    <h1>Draw Your Flower ✿</h1>
+    
+    <canvas id="canvas"></canvas>
+    <div id="flower-container"></div>
 
+    <script>
+        const canvas = document.getElementById('canvas');
+        const ctx = canvas.getContext('2d');
+        const music = document.getElementById('background-music');
+        const flowerContainer = document.getElementById('flower-container');
+
+        // Set canvas to full window size
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight - 80;
+
+        // Drawing variables
+        let isDrawing = false;
+        let lastX = 0;
+        let lastY = 0;
+
+        // Music toggle
+        let isMusicPlaying = false;
+        document.addEventListener('click', () => {
+            if (!isMusicPlaying) {
+                music.play();
+                isMusicPlaying = true;
+            }
+        });
+
+        // Drawing event listeners
+        canvas.addEventListener('mousedown', startDrawing);
+        canvas.addEventListener('mousemove', draw);
+        canvas.addEventListener('mouseup', stopDrawing);
+        canvas.addEventListener('mouseout', stopDrawing);
+
+        function startDrawing(e) {
+            isDrawing = true;
+            [lastX, lastY] = [e.offsetX, e.offsetY];
+        }
+
+        function draw(e) {
+            if (!isDrawing) return;
+            ctx.beginPath();
+            ctx.moveTo(lastX, lastY);
+            ctx.lineTo(e.offsetX, e.offsetY);
+            ctx.strokeStyle = `hsl(${Math.random() * 360}, 50%, 50%)`;
+            ctx.lineWidth = Math.random() * 10;
+            ctx.lineCap = 'round';
+            ctx.stroke();
+            [lastX, lastY] = [e.offsetX, e.offsetY];
+        }
+
+        function stopDrawing() {
+            isDrawing = false;
+        }
+
+        // Floating Sakura Flowers
+        function createSakuraSVG() {
+            const svg = `
+                <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 100 100">
+                    <path d="M50 50 
+                             C40 30, 20 20, 50 10 
+                             C80 20, 60 30, 50 50
+                             C40 70, 20 80, 50 90
+                             C80 80, 60 70, 50 50" 
+                          fill="pink" stroke="hotpink" stroke-width="2"/>
+                    <circle cx="50" cy="50" r="3" fill="darkpink"/>
+                </svg>
+            `;
+            return svg;
+        }
+
+        function createFloatingFlowers(count) {
+            for (let i = 0; i < count; i++) {
+                const flower = document.createElement('div');
+                flower.classList.add('flower');
+                flower.innerHTML = createSakuraSVG();
+                flower.style.left = `${Math.random() * 100}%`;
+                flower.style.top = `${Math.random() * 100}%`;
+                flower.style.animationDelay = `${Math.random() * 10}s`;
+                flower.style.transform = `rotate(${Math.random() * 360}deg)`;
+                flowerContainer.appendChild(flower);
+            }
+        }
+
+        createFloatingFlowers(20);
+
+        // Responsive canvas
+        window.addEventListener('resize', () => {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight - 80;
+        });
+    </script>
+</body>
+</html>
