--- a/flowergen.html
+++ b/flowergen.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sakura Drawing Playground</title>
+    <title>Drawing Playground</title>
     <style>
         body, html {
             margin: 0;
