--- a/flowergen.html
+++ b/flowergen.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -15,6 +15,10 @@
             flex-direction: column;
             align-items: center;
             touch-action: none;
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
         }
         h1 {
             color: #ff69b4;
@@ -26,6 +30,7 @@
         #canvas {
             border: 1px solid #ddd;
             cursor: crosshair;
+            touch-action: none;
         }
         #controls {
             display: flex;
@@ -47,10 +52,6 @@
     </style>
 </head>
 <body>
-  <audio autoplay loop>
-    <source src="WhatsApp Audio 2024-12-02 at 10.24.56_285dcdeb.mp3" type="audio/mpeg">
-    
-</audio>
     <h1>Drawing Playground ✿</h1>
 
     <div id="controls">
@@ -106,6 +107,7 @@
 
         // Start drawing
         function startDraw(event) {
+            event.preventDefault();
             isDrawing = true;
             const coords = getCoordinates(event);
             startX = coords.x;
@@ -115,6 +117,7 @@
         function draw(event) {
             if (!isDrawing || shapeSelector.value !== 'freehand') return;
 
+            event.preventDefault();
             const coords = getCoordinates(event);
             ctx.strokeStyle = colorPicker.value;
             ctx.lineWidth = 2;
@@ -173,5 +176,6 @@
     </script>
 </body>
 </html>
+
 
 
