--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
             
             <a href="whatflowerareyou.html">What Flower Are You?</a>
             <a href="flowergen.html">Create Your Own Flower</a>
-            <a href="calender.html">Flower Calendar</a>
-            <a href="flowerday.html">Flower Of The Day</a>
+            
+            <a href="flowerday.html">Flower Calendar</a>
             <a href="about.html">About</a>
 
 
