--- a/flowergen.html
+++ b/flowergen.html
@@ -52,6 +52,10 @@
     </style>
 </head>
 <body>
+    <audio autoplay loop>
+    <source src="WhatsApp Audio 2024-12-02 at 10.24.56_285dcdeb.mp3" type="audio/mpeg">
+    
+</audio>
     <h1>Drawing Playground ✿</h1>
 
     <div id="controls">
