--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             
         </div>
 
-        <h1>Explore the magical world of flowers and their stories</h1>
+        <h1>Explore the magical world of flowers</h1>
        
     </div>
 
