--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
         <div class="description">
             <p>This website is a heartfelt dedication born from my deep love for flowers. Every petal, every bloom represents a moment of joy, a memory of beauty, and the tender emotions that connect me to my loved ones.</p>
             <p>Flowers have always been more than just plants to me - they are living poetry, silent storytellers of love, hope, and the delicate beauty of life itself.</p>
-            <p>So I create this space as a personal sanctuary, a digital garden where love blossoms freely, dedicated to myself and those who have touched my heart.</p>
+            <p>So I create this space as a personal sanctuary, a digital garden where love blossoms freely, dedicated to myself and my beloved ones.</p>
             <p>Made with Lots of LOVE By Mousini</p>
         </div>
     
